[gd_scene load_steps=13 format=3 uid="uid://cf6orvkb3kumg"]

[ext_resource type="Script" uid="uid://q5t2c31w1j6y" path="res://Scenes/World/upgrade_menu.gd" id="1_7giqg"]
[ext_resource type="Texture2D" uid="uid://fm5hml4m7qc7" path="res://Assets/UI/Card4.png" id="2_6i826"]
[ext_resource type="PackedScene" uid="uid://cwp6ikt5r6byo" path="res://Scenes/UI/upgrade_card.tscn" id="3_6i826"]
[ext_resource type="Script" uid="uid://ca3jhwe2cluhl" path="res://Scenes/UI/cards.gd" id="3_mhx16"]
[ext_resource type="Theme" uid="uid://byp663m3rwxxh" path="res://Scenes/UI/new_theme.tres" id="3_rumwm"]
[ext_resource type="Resource" uid="uid://dqor5s71xeuyn" path="res://Resources/UpgradeCards/HealthMod.tres" id="4_pgfwh"]
[ext_resource type="Resource" uid="uid://bjdvmqgkvswgp" path="res://Resources/UpgradeCards/DefenseMod.tres" id="5_o853v"]
[ext_resource type="Resource" uid="uid://bhhymwgy4kg0t" path="res://Resources/UpgradeCards/scope.tres" id="6_opq14"]
[ext_resource type="Resource" uid="uid://cj08pkhjyuark" path="res://Resources/UpgradeCards/melee.tres" id="7_is5kt"]
[ext_resource type="Resource" uid="uid://debcu8d4i3tnm" path="res://Resources/UpgradeCards/movespeed.tres" id="7_opq14"]
[ext_resource type="Resource" uid="uid://4s8g3jm005df" path="res://Resources/UpgradeCards/attackspeed.tres" id="9_rumwm"]
[ext_resource type="Resource" uid="uid://cpeqbw4ridn4r" path="res://Resources/UpgradeCards/size.tres" id="11_cqbmj"]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource("1_7giqg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -81.0
offset_right = 130.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_6i826")
region_rect = Rect2(0, 0, 64, 112)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_rumwm")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Cards" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("3_mhx16")

[node name="HP" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("4_pgfwh")

[node name="Def" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("5_o853v")

[node name="Range" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("6_opq14")

[node name="ShotDMG" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2

[node name="Melee" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("7_is5kt")

[node name="ATKSPD" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("9_rumwm")

[node name="MoveSpeed" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("7_opq14")

[node name="Size" parent="NinePatchRect/MarginContainer/Cards" instance=ExtResource("3_6i826")]
visible = false
layout_mode = 2
card_res = ExtResource("11_cqbmj")

[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/HP" to="." method="_on_hp_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/Def" to="." method="_on_def_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/Range" to="." method="_on_range_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/ShotDMG" to="." method="_on_shot_dmg_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/Melee" to="." method="_on_melee_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/ATKSPD" to="." method="_on_atkspd_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/MoveSpeed" to="." method="_on_move_speed_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/Cards/Size" to="." method="_on_size_pressed"]
